--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"start": "ng serve",
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
-		"test": "jest"
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:ci": "jest --runInBand"
 	},
 	"private": true,
 	"dependencies": {
